--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,3 +1,7 @@
+name: Bug
+description: Errors in the application or relevant systems.
+title: "[Bug]: "
+labels: ["bug"]
 body:
   - type: markdown
     attributes:
